frontend-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-app
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/dissertacao-mei-projeto-default: "true"
        io.kompose.service: frontend-app
    spec:
      containers:
        - image: dissertacao_mei_projeto-frontend-app:latest
          imagePullPolicy: IfNotPresent
          name: frontend-app
          ports:
            - containerPort: 443
              hostPort: 30000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
