node-red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: node-red
  name: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-red
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/dissertacao-mei-projeto-default: "true"
        io.kompose.service: node-red
    spec:
      containers:
        - image: nodered/node-red
          name: node-red
          ports:
            - containerPort: 1880
              hostPort: 1880
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: node-red-data
      restartPolicy: Always
      volumes:
        - name: node-red-data
          persistentVolumeClaim:
            claimName: node-red-data
status: {}
