udp-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: udp-service
  name: udp-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: udp-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/dissertacao-mei-projeto-default: "true"
        io.kompose.service: udp-service
    spec:
      containers:
        - image: dissertacao_mei_projeto-udp-service:latest
          imagePullPolicy: IfNotPresent
          name: udp-service
          ports:
            - containerPort: 41234
              hostPort: 41234
              protocol: UDP
          resources: {}
      restartPolicy: Always
status: {}
