api-gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway-service
  name: api-gateway-service
spec:
  ports:
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: api-gateway-service
status:
  loadBalancer: {}
