frontend-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-nodeport
spec:
  type: NodePort
  ports:
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30000
      protocol: TCP
  selector:
    io.kompose.service: frontend-app
