frontend-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-app
  name: frontend-app
spec:
  ports:
    - name: "30000"
      port: 30000
      targetPort: 443
  selector:
    io.kompose.service: frontend-app
status:
  loadBalancer: {}
