node-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: node-red
  name: node-red
spec:
  type: NodePort
  ports:
    - name: "1880"
      port: 1880
      targetPort: 1880
      nodePort: 30080
  selector:
    io.kompose.service: node-red
status:
  loadBalancer: {}
