udp-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: udp-service
  name: udp-service
spec:
  ports:
    - name: "41234"
      port: 41234
      protocol: UDP
      targetPort: 41234
  selector:
    io.kompose.service: udp-service
status:
  loadBalancer: {}
